Discussion: some rewrites, paragraph sequence changed; some statements demoted to "Methods"

--- a/main.tex
+++ b/main.tex
@@ -229,19 +229,19 @@ For networks that was exposed to looming stimuli, but used incomplete sets of de
 
 \section*{Discussion}
 
-In this study, we hypothesized that a developing network governed by STDP and synaptic competition, and stimulated by patterned visual stimuli, would spontaneously develop selectivity for looming stimuli, and a non-random network structure. We also hypothesized that these basic predictions would be observed both in the model, and in biological developmental experiments. The support for this hypothesis is mixed. At one hand, the model did develop both selectivity for looming stimuli, and a non-random structure. Several aspects of this non-randomness (namely, the change in degree distribution and modularity) were also replicated in biological experiments. At the same time, not all model predictions were replicated, and we observed no improvement in looming detection in biological experiments, which was concerning, and it seemed to contradict prior behavioral studies [Dong]. Below we speculate on the possible reasons for this apparent contradiction.
+In this study, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual stimuli, would 1) spontaneously develop a non-random network structure, and 2) acquire selectivity for looming stimuli. We also hypothesized that these effects would be robust enough to be also observed in biological experiments. The support for these hypothesis is however mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and distributed stimulus encoding), and this improvement in selectivity was relatively resilient to changes in developmental rules. These seemingly most "expected" results were not verified in biological experiments however, as we observed no improvement in looming detection, as neither average selectivity, stimulus encoding, nor cell specialization differeed between younger and older tadpoles. This was particularly surprising as an improvement in collision detection was previously described in behavioral studies \citep{dong2009}.
 
-Both in computational and biological experiments, observed networks were clearly non-random, with several key parameters (efficiency, modularity, clustering, and hierarchy) significantly different from what would be expected in a randomized network. In the model, most network parameters also changed in development, but except for changes in degree distribution and modularity, we did not detect differences between tectal networks in younger and older tadpoles. This suggests that while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and continue to refine retinal inputs to the tectum \citep{tao2005refinement,munz2014hebbian}[xxx], the patterns of internal tectal connectivity may be relatively settled by stage 46. In the model, most network measures plateaued, or even reversed in late development, which means that to compare model and experimental results we have to make an important assumption about whether stage 46 tadpoles correspond to some mid-point of development, or whether stage 46 already falls on the developmental plateau. Rather surprisingly, the absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages may fall on the “plateau” of looming selectivity development. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is due to maturation of sensorimotor connections from the tectum to the hindbrain that we did not assess in this study.
+The model also developed a non-random structure, with several key network parameters (efficiency, modularity, clustering, and hierarchy) being significantly different from what would be expected in a randomized network. In the model, most network parameters also changed in development, yet except for changes in degree distribution and modularity, we did not detect differences between biological tectal networks in younger and older tadpoles. This seems to suggest that while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and continue to refine retinal inputs to the tectum \citep{tao2005refinement,munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In the model, most network measures plateaued, or even slowly reversed in late development, which means that even for a qualitative comparison between the model and experiments we have to make an important assumption about whether stage 46 tadpoles correspond to a mid-point of development, or whether they already fall on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, may suggest that both stages fall on the “plateau” of tectal network development. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is due to maturation of sensorimotor connections from the tectum to the hindbrain that we did not assess in this study.
 
-At the same time, we could have easily missed some changes in younger and older networks in biological experiments, as the power of our study was relatively low. With 14 and 16 networks for two developmental stages respectively, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$0.05 criterion and 80\% detection power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as the tectum is about 40 cells across [XXX], and packed 6-10 cells deep in its thickest part [XXX], while tapering towards the edges [XXX]. On the other hand, here we reconstructed connectivity within the top layer of cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of the full tectal network. With a coverage so sparse, our network parameters estimations were expected to be noisy, further lowering the power of our tests.
+The changes in degree distribution, observed both in the model and in imaging experiments, seemed to be largely a consequence of synaptic competition. In the model, synaptic competition explicitly promoted connectivity in underconnected neurons, and punished overconnected ones, creating a more openwork and light-frame network organization. The change in modularity observed in our network supports previously described results in networks governed by Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}, and a different imlementation of STDP \citep{stam2010modular}. In our simulations, we did not see a change in the number of neuronal ensembles, as detected through their co-activation, but we believe that it is only because our experiments were not well suited for ensemble detection, as we worked with a strong shared input that reliably activated almost every neuron in the entire tectum. This is very different from a case of spontaneous activity, in which different subnetworks would get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous}.
 
-The best way to address these concerns would be to run a control experiment, analyzing transfer entropy between pairs of cells known to be either connected or not, to estimate the actual power of graph reconstruction under these conditions. One possible approach could be to combine Ca imaging recordings with paired double-cell whole-cell recordings, to see whether brief depolarization of one cell could elicit synaptic currents in the other cell [XXX]. Unfortunately, this type of experiment was beyond our technical possibilities, and so we had to rely on indirect signs of successful network reconstruction. Two most important reasons to believe our physiological results, are 1) the fact that the share of reciprocal connections decreased in development; and 2) a consistent non-randomness of almost all network measurements in reconstructed network. Also, we are assured by the replication of response shapes (compared to \citep{khakhalin2014}, the internal replication of edge detection between stimuli types (see Methods), and the clear observation of retinotopy during responses to looming stimuli.
+The sensitivity analysis for the model showed that of all components it had, patterned visual stimulation was the most important. The model continued to converge to a state suitable for looming detection even if STDP, synaptic competition, or intrinsic plasticity were disrupted, but it failed if the sensory inputs were kept random. Moreover, as long as the intrinsic plasticity was present, the model became sensitive to looming stimuli on average, on a sell-by-cell basis, as well as in terms of its total response. It was not critical for the model to be trained on looming stimuli, as we originally expected; it performed almost as well well with a mix of translational, receding, and oblique looming stimuli, which means that it is the stimulus locality and edge continuity that mattered for the development. This also suggests that proper intratectal network organization can in principle emerge from responses to retinal waves alone, provided that retinal waves have spatial and temporal statistics similar to that of a shade with a smooth edge moving across the visual field.
 
-The changes in degree distribution, observed both in the model and in imaging experiments, seemed to be a consequence of synaptic competition. At least in the model, synaptic compatition explicitly promoted connectivity in underconnected neurons, and punished overconnected ones, which led to a more openwork and light-frame network organization. The observed change in modularity is similar to previously described changes in networks governed by Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}, and by variations of STDP \citep{stam2010modular}; our results contribute to this research, further demonstrating that a combination of STDP and synaptic competition can quickly transform a random network into a modular network. We did not see a change in the number of neuronal ensembles, based on their co-activation, but we believe that our experiments were not well suited for ensemble detection, as we worked with a strong shared input that reliably activated almost every neuron in the entire tectum. This is very different from a case of spontaneous activity, in which different subnetworks would get randomly activated, with activity propagating within network modules more effectively than between them \citep{avitan2017spontaneous}.
+At the same time, our main measure of network convergence - the possibility of selecting a subset of “tectal cells” to build a reliable detector of looming stimuli - relies on an assumption that in development, the animal has access to both “training” looming stimuli and a learning signal, to correctly select this subset. We assume that in tadpoles, this signal may come both from dimming receptors in the retina, and from mechanosensory and lateral line receptors in the body, and that it can act on tectal connections to the reticulospinal neurons in the hindbrain, selecting those visual inputs that were most active immediately before the collision. Moreover, during random encounters with objects in space, different parts of the retina would be dimmed, and different parts of the lateral line would be activated, giving a tadpole enough information to build several overlapping subnetworks, each selective for impeding collisions of different geometry, and projecting to different subsets of motor neurons. Therefore, this type of training could conceivably lead to the development of nuanced escape responses, that use spatial context to optimize avoidance behaviors, as described in both tadpoles \citep{khakhalin2014} and fish [XXX].
 
-The sensitivity analysis for the model showed that of all components it had, patterned visual stimulation was the most important. The model continued to converge to a state that made looming detection possible even if STDP, synaptic competition, or intrinsic plasticity were disrupted, but it failed if the sensory inputs were kept random. Moreover, as long as the intrinsic plasticity was present, the model became sensitive to looming stimuli on average, on a sell-by-cell basis, as well as in terms of its total response. Interestingly, it was not critical for the model to be trained on looming stimuli, as we originally expected; it performed equally well with a mix of looming, receding, and transitioning stimuli, which means that it is the stimulus locality and edge continuity that mattered. This also suggests that proper intratectal network organization can probably emerge from responses to retinal waves alone, provided that retinal waves have spatial and temporal statistics similar to that of a shade with a smooth edge moving across the visual field.
+A relatively poor fit between network predictions and biological experiments can also be a consequence of the power of our study being relatively low. With 14 and 16 networks for two developmental stages respectively, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$0.05 threshold and 80\% detection power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as the tectum is about 40 cells across [XXX], and packed 6-10 cells deep in its thickest part [XXX], while tapering towards the edges [XXX]. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of the full tectal network. With a coverage so sparse, our network parameters estimations were expected to be noisy, further lowering the power of our tests.
 
-At the same time, our measure of network convergence - the possibility of selecting a subset of “tectal cells” to build a reliable detector of looming stimuli - relies on an assumption that in development, the animal has access to both “training” looming stimuli and a learning signal. We assume that for a real tadpole, this signal may come either from dimming receptors in the retina, or from mechanosensory and lateral line receptors in the body, and that it can act on tectal connections to the reticulospinal neurons in the hindbrain. Moreover, during random encounters with objects in space, different parts of the retina would be dimmed, and different parts of the lateral line would be activated, giving a tadpole enough information to build several overlapping subnetworks, each selective for impeding collisions of different geometry, and projecting to different subsets of motor neurons. Therefore, this type of training could conceivably lead to the development of nuanced escape responses, that use the spatial context to optimize avoidance behaviors \citep{khakhalin2014}[XXX fish refs].
+The best way to address these concerns would be to run a set of control experiment, analyzing transfer entropy between pairs of cells known to be either connected or not, to estimate the actual power of graph reconstruction under these conditions. One possible approach could be to combine Ca imaging recordings with paired double-cell whole-cell recordings, probing connections by brief depolarization of one cell and recording of synaptic currents in the other cell [XXX]. Unfortunately, this type of experiments was beyond our technical possibilities, and we had to rely on indirect signs of successful network reconstruction. Two most important observations that support our results, are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks. Also, we were assured by the replication of tectal response shapes (compared to \citep{khakhalin2014}, the internal replication of edge detection between stimuli types (see Methods), as well as observation of retinotopy during responses to looming stimuli. We therefore conclude that at the very least, this work serves as a proof of principle, demonstrating that selective staining of neurons in a living brain, followed by high-speed ($\sim$100 frames/s) calcium imaging recordings, allows directed reconstruction of local network connectivity.
 
 \section*{Methods}
 
@@ -254,6 +254,8 @@ Note also that in this paper we consistely describe adjacency matrices as they a
 \subsection*{Experiments}
 
 Our experiments followed the procedure previously described in \citep{xu2011,truszkowski2017}, with visual stimulation described in \citep{khakhalin2014}. All experimental procedures were performed at Brown University, in accordance with university IACUC protocols. Except noted otherwise, all chemicals were purchased from Sigma. Tadpoles were kept in Steinberg’s solution, on a 12/12 light cycle, at 18$^\circ$ C for 10-20 days, until they reached Nieuwkoop-Faber developmental stages 45-46 or 48-49. In each experiment, we anesthetized a tadpole with 0.02\% tricainemethane sulfonate (MS-222) solution for 5 minutes, then paralyzed it by immersion in 20 mM solution of tubacurarine for 5 minutes, and pinned it down to a carved Sylgard block within the recording chamber, filled with artificial cerebro-spinal fluid solution (ACSF: 115 mM NaCl, 4 mM KCl, 5 mM HEPES, 10 uM glycine, 10 mM glucose). The optic tectum was exposed, and ventricular membrane was removed on one side of the tectum. Tadpoles were pinned tilted, at an angle of 10-20$^\circ$, to keep the exposed tectal surface flat for imaging. We then surrounded the tadpole with a small circular enclosure 15 mm in diameter, made of a thicker part of a standard plastic transfer pipette, to achieve higher concentration of Ca-sensitive dye in the solution. We dissolved 50 ug of Oregon Green Bapta 1 solution (OGB1 $\#$06807, Molecular Probes, Waltham, MA) in 30 ul of medium consisting of 4\% F-127 detergent in 96\% DMSO by weight; agitated this solution in a sonicator for 15 minutes, then added 30 ul of ACSF to the vial, and sonicated for 10 minutes more. The solution was then transferred to the chamber, mixed with 4 ml of ACSF to the final concentration of 10 uM, and the chamber was placed in the dark for 1 hour. After staining, the circular enclosure was removed; the preparation was washed with 10 ml of ACSF 3 times; the chamber was filled with 10 ml of fresh ACSF, and transferred under the scope.
+
+This staining protocol with a BAPTA-conjugated dye proved to be uniquely challenging, and had a high failure rate. As staining procedure involved a detergent, and called for high concentrations of dye, the most successful preparations were those that received the highest possible exposure that did not yet kill the cells. A large share of preparations however either fell short of optimal staining, and had a weak fluorescence signal, and low signal-to-noise ratio, or got overexposed, leading to strong fluorescence, but weak responses to stimulation, as neurons grew increasingly unhealthy. The variable amount of uncertainty in edge detection from one experiment to another also complicated our network analysis (see below).
 
 Visual stimulation was provided with a previously described setup \citep{khakhalin2014}, consisting of an LCD screen (Kopin Corporation, Taunton, MA, USA) illuminated by a blue LED (LXHL-LB3C, 490 nm; Lumileds Lighting, USA), with the image projected to an optic multifiber (600 um, Fujikura Ltd, Tokyo, Japan). The other end of the fiber was brought to the left eye of the tadpole, and placed 400 um away from the lens, and on the axis of the eye, to have the image projected to the center of the retina. The stimulation sequence consisted of three stimuli: looming stimulus (in which a circle appeared in the center of the field, its radius growing linearly from 0 to full-field within 1 second), full-field flash, and spatially “scrambled” stimulus. For the scrambled stimulus, we divided the field of view into a grid of 17 by 17 squares and randomly reassigned these squares within the image. The result was a stimulus that was identical to looming stimulus in terms of its total brightness at every time step, and presented fragments of a moving edge locally (within every square in a reshuffling grid), but lacked mesoscale spatial organization. The permutation of squares within the grid was randomized for each experiment, but consistent within all trials within an experiment. The stimuli were delivered every 20 s, in a sequence “looming, flash, scrambled”, usually for the total of 60 or 72 stimuli. The stimuli were generated in Matlab (Mathworks), using Psychtoolbox \citep{kleiner2007psychtoolbox}. Imaging excitation light was turned on 1 s before the onset of the visual stimulus, which was shown not to interfere with visual stimulation \citep{xu2011}, and kept on for 5 s.
 
@@ -340,8 +342,6 @@ In our project, common drive (visual input from the retina) presents a particula
 This approach is similar to the idea of analyzing subtle variations in activation from one response to another, as opposed to the analysis of activation traces themselves. As the stimuli we presented were same in every trial, the progression of the common drive over time was shared across all trials. If a connection between cells $i$ and $j$ was suggested by the analysis of reshuffled data, these cells were clearly sequentially driven by a common input, and not by a true causal connection between them.
 
 For each TE estimation, we also calculated a corresponding p-value, to quantify whether the observed TE was significantly different from the set of TE estimations obtained on surrogate data, corresponding to a null hypothesis of no causal connections, and all network activity due to shared drive. With the computational power available, we could only afford to generate 1000 surrogate reshuffled networks for every TE calculation, which made it impossible to use the false discovery rate correction on our data, as it is recommended for large-scale studies of brain connectivity [Vicente 2011; Lindner 2011]. With $\sim$10$^2$ neurons and 10$^4$ connections the smallest possible non-zero p-value of 0.001, corresponding to finding a more extreme TE value in one out of 1000 surrogate experiments, was already larger than the Benjamini-Hochberg threshold of $\frac{k}{m}\alpha=$5e-6. With a permissive threshold of $\alpha$=0.01, each subset of data (recordings of responses to collisions, flashes, and scrambled stimuli), when taken separately, suggested the existence of 2\% to 69\% of all possible directed edges in the graph, depending on the experiment (median of 8\%). The share of edges that were independently discovered in all three types of experiments (median value of 0.1\% of all possible edges) was on average 1.8 times larger than one would expect in case of spurious and independent discovery (signrank $p$=7e-7), suggesting that the three subsets of data, originating from responses to three different stimuli, can be considered replications for the purposes of edge discovery. At the same time, when we tried to restrict our analysis only to edges that were fully replicated in all 3 sets with $\alpha < $0.05, we ended up with the median graph size of only 18 edges (6 edges in the largest connected component). The overwhelming majority (18 out of 19) of datasets with fewer than 10 reconstructed edges were recorded in the early set of experiments, when our dye transfer from DMSO to ACSF was still imperfect. As during data acquisition, we alternated between stage 46 and 49 tadpoles, the set of “weak” experiments was not biased, and consisted of 10 younger, and 9 older tadpoles. We decided to exclude these 19 “weak” experiments, and believe that restricting all analysis to remaining 30 experiments did not bias the study.
-
-One of the unique challenges of imaging protocols used in this study was the variable quality of staining achieved with the BAPTA-conjugated dye. As staining procedure involved a detergent, and called for high concentrations of dye, the most successful preparations were those that received the highest possible concentration of dye that did not yet kill the cells. Several preparations however either fell a little short of this target, and had a higher than optimal level of noise, or got overexposed, and had strong fluorescence, but weak responses to stimulation. The variable amount of uncertainty in edge detection from one experiment to another greatly complicated our network analysis.
 
 To make the edge inference more robust, for 30 experiments included in further analysis, we relaxed our criteria on edge discovery, while still giving preference to edges discovered independently in more than one subset of responses. To do so, we included in our reconstruction only edges with geometric mean of p-values below significance threshold: $\prod{p_k}<\alpha^3$ , where $p_k$ are p-values for each of three subsets of data (responses to flash, crash, and scrambled stimuli). Because of variation in staining quality and focal plane alignment, we could not use a fixed significance threshold $\alpha$ for all experiments, and instead followed an approach common in analysis of noisy networks, setting the average node degree (the ratio of network edges to network nodes, for directed graphs $=E/N$) to an arbitrary reasonable value \citep{stetter2012te}. For this study, we picked a value of 1.0 (number of edges equal to the number of nodes), which lead to 128$\pm$41 edges in each experiment on average (0.9\% of all possible edges); 50$\pm$21 weakly connected components, and 74$\pm$30 nodes in the largest connected component. The comparison of network properties (Fig) did not change qualitatively in a broad range of assumed average degrees (from $\sim$ 0.5 to 1.5), but observed effects became weaker and regressed to random effects outside of this range.
 
